WebCore:

2009-07-29  Ryosuke Niwa  <rniwa@webkit.org>

        Reviewed by Justin Garcia.

        REGRESSION(r46370-46426): /editing/style/remove-underline-from-stylesheet.html fails
        https://bugs.webkit.org/show_bug.cgi?id=27809

        The patch primarily rebaselines the tests but also fixes the bug in currentlyHasStyle.
        To determine that a particular text decoration is present, currentlyHasStyle should refer to
        -webkit-text-decorations-in-effect to take care of styles set by u, s, strike tags and ancestors' CSS.
        We also need to update layout to accommodate the changes made within ApplyStyleCommand.

        * editing/ApplyStyleCommand.cpp: ditto
        (WebCore::StyleChange::currentlyHasStyle): ditto

LayoutTests:

2009-07-29  Ryosuke Niwa  <rniwa@webkit.org>

        Reviewed by Justin Garcia.

        REGRESSION(r46370-46426): /editing/style/remove-underline-from-stylesheet.html fails
        https://bugs.webkit.org/show_bug.cgi?id=27809

        Since new behavior is consistent with Firefox, we rebaseline the test cases.
        The patch converts remove-underline-from-stylesheet and remove-underline-in-bold to dumpAsText tests
        with markup printed explicitly because pixel tests did not detect the disappearance of underline.

        * editing/style/remove-underline-from-stylesheet-expected.txt: Added.
        * editing/style/remove-underline-from-stylesheet.html:
        * editing/style/remove-underline-in-bold-expected.txt: Added.
        * editing/style/remove-underline-in-bold.html:
        * platform/mac/editing/style/remove-underline-from-stylesheet-expected.checksum: Removed.
        * platform/mac/editing/style/remove-underline-from-stylesheet-expected.png: Removed.
        * platform/mac/editing/style/remove-underline-from-stylesheet-expected.txt: Removed.
        * platform/mac/editing/style/remove-underline-in-bold-expected.checksum: Removed.
        * platform/mac/editing/style/remove-underline-in-bold-expected.png: Removed.
        * platform/mac/editing/style/remove-underline-in-bold-expected.txt: Removed.
        * platform/qt/editing/style/remove-underline-from-stylesheet-expected.txt: Removed.
        * platform/qt/editing/style/remove-underline-in-bold-expected.txt: Removed.



Canonical link: https://commits.webkit.org/38173@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@46567 268f45cc-cd09-0410-ab3c-d52691b4dbfc